# videoparser-ng

./: .gitmodules
VideoParser/: CMakeLists.txt  VideoParser.cpp  VideoParser.h
VideoParserCli/: main.cpp
util/: visualize_exports.py
